<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/MainHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/app_name"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider_1"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:background="#999999"
        android:contentDescription="@string/divider_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/MainHeading"
        app:srcCompat="@drawable/shape_rectangle_stroke" />


    <TextView
        android:id="@+id/inputWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:text="@string/input_weight"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/divider_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_1"
        app:layout_constraintVertical_bias="0.282" />

    <TextView
        android:id="@+id/sampleWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp"
        android:paddingLeft="80dp"
        android:paddingRight="10dp"
        android:text="@string/sample_weight"
        android:textColor="#ff9900"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/weightUnit"
        app:layout_constraintEnd_toEndOf="@+id/divider_2"
        app:layout_constraintTop_toBottomOf="@+id/divider_1"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/divider_2"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginTop="150dp"
        android:background="#d1d1d1"
        android:contentDescription="@string/divider_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shape_rectangle_stroke"
        tools:layout_editor_absoluteX="-8dp" />

    <TextView
        android:id="@+id/input_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/input_height"
        android:textSize="23sp"
        app:layout_constraintEnd_toStartOf="@+id/spinner_weight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_2" />

    <TextView
        android:id="@+id/sampleHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:text="@string/sample_height"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/heightUnit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_2" />

    <TextView
        android:id="@+id/heightUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp"
        android:text="@string/height_unit"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/divider_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_2"
        app:layout_constraintVertical_bias="0.687" />

    <TextView
        android:id="@+id/weightUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/weight_unit"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/divider_2"
        app:layout_constraintEnd_toEndOf="@+id/divider_2"
        app:layout_constraintTop_toBottomOf="@+id/divider_1"
        app:layout_constraintVertical_bias="0.823" />

    <View
        android:id="@+id/divider_3"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginTop="270dp"
        android:background="#d1d1d1"
        android:contentDescription="@string/divider_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shape_rectangle_stroke"
        tools:layout_editor_absoluteX="-12dp" />

    <View
        android:id="@+id/divider_4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="300dp"
        android:background="#d1d1d1"
        android:contentDescription="@string/divider_bar"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shape_rectangle_stroke"
        tools:layout_editor_absoluteX="-12dp" />


    <Spinner
        android:id="@+id/spinner_weight"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        android:padding="50sp"
        android:spinnerMode="dialog"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/spinner_height"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/inputWeight"
        app:layout_constraintTop_toBottomOf="@id/divider_1"
        tools:visibility="visible" />

    <Spinner
        android:id="@+id/spinner_height"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:spinnerMode="dialog"
        app:layout_constraintStart_toEndOf="@id/input_height"
        app:layout_constraintTop_toBottomOf="@id/divider_2" />


</androidx.constraintlayout.widget.ConstraintLayout>
